# deribit-index-price-history-api

./: .dockerignore  .env.example  .gitignore  README.md  alembic.ini  docker-compose.two.yml  docker-compose.yml  pyproject.toml  pyrightconfig.json
alembic/: env.py  script.py.mako
alembic/versions/: 20260116_1819_create_price_points.py  20260116_1932_drop_redundant_price_points_index.py
app/: main.py
app/api/: pagination.py
app/api/routes/: prices.py
app/core/: config.py  logging.py
app/db/: locks.py  models.py  repository.py  session.py
app/deribit/: client.py  errors.py
app/schemas/: prices.py
app/services/: price_service.py
app/workers/: celery_app.py  runtime.py  schedule.py  tasks.py
docker/: allinone.Dockerfile  api.Dockerfile  beat.Dockerfile  migrate.Dockerfile  start-allinone.sh  start-api.sh  start-beat.sh  start-worker.sh  supervisord.conf  worker.Dockerfile
tests/: conftest.py  test_pagination.py  test_prices_api.py
tests/deribit/: test_client_parsing.py
tests/integration/: conftest.py  test_db_locks.py  test_repository_upsert.py
