[project]
name = "deribit-index-price-history-api"
version = "0.1.0"
description = "Deribit index price history API"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "celery>=5.3",
    "fastapi>=0.110",
    "pydantic-settings>=2.2",
    "redis>=5.0",
    "sqlalchemy[asyncio]>=2.0",
    "uvicorn[standard]>=0.27",
]
